Fix K4811 SideBar reboot confirmation in beta.11