@@ -10,8 +10,8 @@ android {
         applicationId "dev.petrov.yaplay"
         minSdk 29
         targetSdk 35
-        versionCode 110
-        versionName "1.0.0-beta.10"
+        versionCode 111
+        versionName "1.0.0-beta.11"
     }
 
     buildTypes {
@@ -29,6 +29,21 @@ android {
         targetCompatibility JavaVersion.VERSION_17
     }
 
+    testOptions {
+        unitTests.includeAndroidResources = true
+        unitTests.all {
+            jvmArgs "--add-opens=java.base/java.lang=ALL-UNNAMED",
+                    "--add-opens=java.base/java.util=ALL-UNNAMED",
+                    "--add-opens=java.base/java.io=ALL-UNNAMED",
+                    "--add-opens=java.base/java.net=ALL-UNNAMED",
+                    "--add-opens=java.base/java.security=ALL-UNNAMED",
+                    "--add-opens=java.base/java.text=ALL-UNNAMED",
+                    "--add-opens=java.base/jdk.internal.access=ALL-UNNAMED",
+                    "--add-opens=java.desktop/java.awt.font=ALL-UNNAMED",
+                    "--add-opens=jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED"
+        }
+    }
+
     applicationVariants.configureEach { variant ->
         variant.outputs.configureEach {
             outputFileName = "YMPlayer-v${variant.versionName}-${variant.name}-b${variant.versionCode}.apk"
@@ -37,6 +52,8 @@ android {
 }
 
 dependencies {
+    testImplementation "junit:junit:4.13.2"
+    testImplementation "org.robolectric:robolectric:4.16"
     def media3Version = "1.5.1"
 
     compileOnly "androidx.annotation:annotation:1.6.0"
